Fixed 2d Database Connection String

--- a/CleanArch/CleanArch.Infra.data/Context/appsettings.json
+++ b/CleanArch/CleanArch.Infra.data/Context/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
     "UniversityIdentityDBConnection": "Server=D42DXVP2\\SQLEXPRESS;Database=UniversityIdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "UniversityDBConnection": "Data Source=D42DXVP2\\SQLEXPRESS;Database=UniversityDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-
+    "UniversityDBConnection":         "Server=Server=D42DXVP2\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
